--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     >
     <link
       rel="stylesheet"
-      href="../styles/main.css"
+      href="./components/styles/main.css"
     >
   </head>
   <body>
@@ -29,7 +29,7 @@
 
       <img
         class="product-card__image"
-        src="../img/Acer-Aspire-3 (A315-57G-336G)).jpg"
+        src="./components/img/Acer-Aspire-3 (A315-57G-336G)).jpg"
         alt="Acer-Aspire-3 (A315-57G-336G)"
       >
 
@@ -60,6 +60,35 @@
         >
           Add to cart
         </a>
+    </div>
+
+    <div class="pagination">
+      <div class="
+      pagination__select
+      pagination__select-arrow
+      pagination__select-arrow_left"
+   ></div>
+
+      <div class="pagination__select-container">
+        <div class="pagination__select">1</div>
+        <div class="pagination__select">2</div>
+        <div class="pagination__select">3</div>
+        <div class="pagination__select">4</div>
+        <div class="pagination__select">5</div>
+        <div class="pagination__select">6</div>
+        <div class="pagination__select">7</div>
+        <div class="pagination__select">8</div>
+        <div class="pagination__select">9</div>
+        <div class="pagination__select">10</div>
+        <div class="pagination__select">11</div>
+        <div class="pagination__select">12</div>
+      </div>
+
+      <div class="
+      pagination__select
+      pagination__select-arrow
+      pagination__select-arrow_right"
+      ></div>
     </div>
 
     </button>
