--- a/card.html
+++ b/card.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="./styls/styl.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
 <div class="blok-rama">
@@ -11,9 +12,9 @@
 
   <div class="blok-zv-cn">
     <div class="blok-zvezda">
-      <div class="corect2">1.23</div>
-      <div class="corect1">&#x2730</div>
-      <!-- &#9734 -->
+      <div class="corect1">1.23</div>
+      <div class="corect1"><i class="bi bi-star"></i></div>
+
     </div>
     <div class="blok-cena">15999</div>
   </div>
