--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -10,7 +10,7 @@
       margin-bottom: 30px;
     }
 
-    .row {
+    .row, .row-right {
       width: 100%;
       display: flex;
       flex-wrap: wrap;
@@ -70,14 +70,29 @@
       width: calc(100% / 12 * 12);
     }
 
-    /* s */
-    @media (min-width: 576px) {
-      .col-s-2 {
-        width: calc(100% / 12 * 2);
+    /* xs */
+    @media (min-width: 0px) {
+      .col-xs-0 {
+        width: calc(100% / 12 * 0);
       }
 
-      .col-s-10 {
-        width: calc(100% / 12 * 10);
+      .col-xs-12 {
+        width: calc(100% / 12 * 12);
+      }
+    }
+
+    /* s */
+    @media (min-width: 576px) {
+      .col-s-3 {
+        width: calc(100% / 12 * 3);
+      }
+
+      .col-s-9 {
+        width: calc(100% / 12 * 9);
+      }
+
+      .col-s-12 {
+        width: calc(100% / 12 * 12);
       }
     }
 
@@ -85,6 +100,14 @@
     @media (min-width: 768px) {
       .col-m-6 {
         width: calc(100% / 12 * 6);
+      }
+
+      .col-m-5 {
+        width: calc(100% / 12 * 5);
+      }
+
+      .col-m-7 {
+        width: calc(100% / 12 * 7);
       }
     }
 
@@ -101,28 +124,43 @@
 
     /* xl */
     @media (min-width: 1200px) {
-      .col-xl-2 {
-        width: calc(100% / 12 * 2);
+      .col-xl-3 {
+        width: calc(100% / 12 * 3);
       }
 
-      .col-xl-10 {
-        width: calc(100% / 12 * 10);
+      .col-xl-9 {
+        width: calc(100% / 12 * 9);
+      }
+
+      .col-xl-4 {
+        width: calc(100% / 12 * 4);
       }
     }
+
+
   </style>
 </head>
 <body>
-  <main>
-    <div class="container">
-      <div class="row">
-        <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">
-          col #1
-        </div>
-        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
-          col #2
-        </div>
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-xs-0 col-s-3 col-m-5 col-l-4 col-xl-3">
+        Left side
+      </div>
+      <div class="row-right col-12 col-xs-12 col-s-9 col-m-7 col-l-8 col-xl-9">
+        <div class="col-12">Right side</div>
+        <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">cad 1</div>
+        <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">cad 2</div>
+        <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">cad 3</div>
+        <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">cad 4</div>
+        <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">cad 5</div>
+        <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">cad 6</div>
+        <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">cad 7</div>
+        <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">cad 8</div>
+        <div class="col-xl-4 col-l-4 col-m-6 col-s-12 col-xs-12">cad 9</div>
       </div>
     </div>
-  </main>
+  </div>
+</main>
 </body>
 </html>
