--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -8,12 +8,22 @@
     .container {
       width: 100%;
       margin-bottom: 30px;
-    }
+          }
 
     .row {
       width: 100%;
       display: flex;
       flex-wrap: wrap;
+    }
+    .row1 {
+      width: 100%;
+      display: flex;
+      flex-wrap: nowrap;
+      flex-direction: column;
+    }
+    .disp {
+      display: none;
+
     }
 
     div[class^='col-'] {
@@ -79,6 +89,16 @@
       .col-s-10 {
         width: calc(100% / 12 * 10);
       }
+      .disp {
+        display: contents;
+      }
+      .row1 {
+        flex-wrap: wrap;
+        flex-direction:row;
+      }
+      .col-6 {
+        width: calc(100% / 12 * 6);
+}
     }
 
     /* m */
@@ -86,6 +106,7 @@
       .col-m-6 {
         width: calc(100% / 12 * 6);
       }
+
     }
 
     /* l */
@@ -93,17 +114,20 @@
       .col-l-4 {
         width: calc(100% / 12 * 4);
       }
-
+      .col-4 {
+        width: calc(100% / 12 * 4);
+      }
       .col-l-8 {
         width: calc(100% / 12 * 8);
       }
     }
 
     /* xl */
-    @media (min-width: 1200px) {
+    @media (min-width: 1400px) {
       .col-xl-2 {
         width: calc(100% / 12 * 2);
       }
+
 
       .col-xl-10 {
         width: calc(100% / 12 * 10);
@@ -115,12 +139,46 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">
-          col #1
+        <div class="disp">
+          <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-3">
+            left side
+          </div>
         </div>
-        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
-          col #2
+        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-7 col-4">
+          right side
+          <div class="row1">
+            <div class="col-4 col-6 col-12">
+              card 1
+            </div>
+            <div class="col-4 col-6 col-12">
+              card 2
+            </div>
+            <div class="col-4 col-6 col-12">
+              card 3
+            </div>
+            <div class="col-4 col-6 col-12">
+              card 4
+            </div>
+            <div class="col-4 col-6 col-12">
+              card 5
+            </div>
+            <div class="col-4 col-6 col-12">
+              card 6
+            </div>
+            <div class="col-4 col-6 col-12">
+              card 7
+            </div>
+            <div class="col-4 col-6 col-12">
+              card 8
+            </div>
+            <div class="col-4 col-6 col-12">
+              card 9
+            </div>
+
+          </div>
+
         </div>
+
       </div>
     </div>
   </main>
