--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -3,123 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Grid with media queries</title>
-  <style>
-    .container {
-      width: 100%;
-      margin-bottom: 30px;
-    }
-
-    .row {
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-    }
-
-    div[class^='col-'] {
-      outline: 1px solid red;
-      background: lightgray;
-      text-align: center;
-    }
-
-    .col-1 {
-      width: calc(100% / 12);
-    }
-
-    .col-2 {
-      width: calc(100% / 12 * 2);
-    }
-
-    .col-3 {
-      width: calc(100% / 12 * 3);
-    }
-
-    .col-4 {
-      width: calc(100% / 12 * 4);
-    }
-
-    .col-5 {
-      width: calc(100% / 12 * 5);
-    }
-
-    .col-6 {
-      width: calc(100% / 12 * 6);
-    }
-
-    .col-7 {
-      width: calc(100% / 12 * 7);
-    }
-
-    .col-8 {
-      width: calc(100% / 12 * 8);
-    }
-
-    .col-9 {
-      width: calc(100% / 12 * 9);
-    }
-
-    .col-10 {
-      width: calc(100% / 12 * 10);
-    }
-
-    .col-11 {
-      width: calc(100% / 12 * 11);
-    }
-
-    .col-12 {
-      width: calc(100% / 12 * 12);
-    }
-
-    /* s */
-    @media (min-width: 576px) {
-      .col-s-2 {
-        width: calc(100% / 12 * 2);
-      }
-
-      .col-s-10 {
-        width: calc(100% / 12 * 10);
-      }
-    }
-
-    /* m */
-    @media (min-width: 768px) {
-      .col-m-6 {
-        width: calc(100% / 12 * 6);
-      }
-    }
-
-    /* l */
-    @media (min-width: 992px) {
-      .col-l-4 {
-        width: calc(100% / 12 * 4);
-      }
-
-      .col-l-8 {
-        width: calc(100% / 12 * 8);
-      }
-    }
-
-    /* xl */
-    @media (min-width: 1200px) {
-      .col-xl-2 {
-        width: calc(100% / 12 * 2);
-      }
-
-      .col-xl-10 {
-        width: calc(100% / 12 * 10);
-      }
-    }
-  </style>
 </head>
 <body>
   <main>
     <div class="container">
-      <div class="row">
-        <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">
-          col #1
+      <div class="row leftSide">
+        <div class="xs-none s-none m-block col-l-3 col-xl-3">
+          Left side
         </div>
-        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
-          col #2
+
+        <div class="col-xs-12 col-s-12 col-m-10 col-l-9 col-xl-9">
+          Right side
+          <div class="row">
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">Card 1</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">Card 2</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">Card 3</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">Card 4</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">Card 5</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">Card 6</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">Card 7</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">Card 8</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">Card 9</div>
+          </div>
         </div>
       </div>
     </div>
