--- a/grid/flex-grid.html
+++ b/grid/flex-grid.html
@@ -3,113 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <title>Grid</title>
-  <style>
-    .container {
-      width: 100%;
-      margin-bottom: 30px;
-    }
-
-    .row {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-    }
-
-    div[class^='col-'] {
-      outline: 1px solid red;
-      background: lightgray;
-      text-align: center;
-    }
-
-    .col-1 {
-      width: calc(100% / 12);
-    }
-
-    .col-2 {
-      width: calc(100% / 12 * 2);
-    }
-
-    .col-3 {
-      width: calc(100% / 12 * 3);
-    }
-
-    .col-4 {
-      width: calc(100% / 12 * 4);
-    }
-
-    .col-5 {
-      width: calc(100% / 12 * 5);
-    }
-
-    .col-6 {
-      width: calc(100% / 12 * 6);
-    }
-
-    .col-7 {
-      width: calc(100% / 12 * 7);
-    }
-
-    .col-8 {
-      width: calc(100% / 12 * 8);
-    }
-
-    .col-9 {
-      width: calc(100% / 12 * 9);
-    }
-
-    .col-10 {
-      width: calc(100% / 12 * 10);
-    }
-
-    .col-11 {
-      width: calc(100% / 12 * 11);
-    }
-
-    .col-12 {
-      width: calc(100% / 12 * 12);
-    }
-  </style>
+  <link rel="stylesheet" href="../css/grid.css">
 </head>
 <body>
-  <main>
-    <div class="container">
-      <div class="row">
-        <div class="col-1">1</div>
-        <div class="col-1">2</div>
-        <div class="col-1">3</div>
-        <div class="col-1">4</div>
-        <div class="col-1">5</div>
-        <div class="col-1">6</div>
-        <div class="col-1">7</div>
-        <div class="col-1">8</div>
-        <div class="col-1">9</div>
-        <div class="col-1">10</div>
-        <div class="col-1">11</div>
-        <div class="col-1">12</div>
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="left-side col-4-m">
+            <div class="col-12">left-side</div>
+      </div>
+      <div class="right-side col-8-m  col-12">
+        <div class="col-12">right-side</div>
+        <div class="right-side-row">
+        <div class="col-12 col-6-m col-4-l col-3-xl">card 1</div>
+        <div class="col-12 col-6-m col-4-l col-3-xl">card 2</div>
+        <div class="col-12 col-6-m col-4-l col-3-xl">card 3</div>
+        <div class="col-12 col-6-m col-4-l col-3-xl">card 4</div>
+        <div class="col-12 col-6-m col-4-l col-3-xl">card 5</div>
+        <div class="col-12 col-6-m col-4-l col-3-xl">card 6</div>
+        <div class="col-12 col-6-m col-4-l col-3-xl">card 7</div>
+        <div class="col-12 col-6-m col-4-l col-3-xl">card 8</div>
+        <div class="col-12 col-6-m col-4-l col-3-xl">card 9</div>
+          </div>
       </div>
     </div>
+  </div>
+  <div class="container">
+    <div class="row-grid">
+      <div class="left-side-grid">
+        <div class="col">left-side</div>
+      </div>
+      <div class="right-side-grid">
+        <div class="col">right-side</div>
+        <div class="right-side-row-grid">
+          <div class="col">card 1</div>
+          <div class="col">card 2</div>
+          <div class="col">card 3</div>
+          <div class="col">card 4</div>
+          <div class="col">card 5</div>
+          <div class="col">card 6</div>
+          <div class="col">card 7</div>
+          <div class="col">card 8</div>
+          <div class="col">card 9</div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-8">
-          8/12
-        </div>
-        <div class="col-4">
-          4/12
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-3">
-          3/12
-        </div>
-        <div class="col-9">
-          9/12
-        </div>
-      </div>
-    </div>
-  </main>
+</main>
 </body>
 </html>
