--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grid with media queries</title>
+
   <style>
     .container {
       width: 100%;
@@ -20,6 +21,10 @@
       outline: 1px solid red;
       background: lightgray;
       text-align: center;
+    }
+
+    .left-side {
+      height: 100vh;
     }
 
     .col-1 {
@@ -71,55 +76,104 @@
     }
 
     /* s */
-    @media (min-width: 576px) {
-      .col-s-2 {
-        width: calc(100% / 12 * 2);
+    @media (min-width: 50px) {
+      .col-s-12 {
+        width: calc(100% / 12 * 12);
       }
-
-      .col-s-10 {
-        width: calc(100% / 12 * 10);
+      .left-side {
+        display: none;
       }
     }
 
     /* m */
     @media (min-width: 768px) {
+      .col-m-3 {
+        width: calc(100% / 12 * 3);
+      }
+      .col-m-9 {
+        width: calc(100% / 12 * 9);
+      }
       .col-m-6 {
         width: calc(100% / 12 * 6);
+      }
+      .left-side {
+        display: inherit;
       }
     }
 
     /* l */
     @media (min-width: 992px) {
+      .col-l-3 {
+        width: calc(100% / 12 * 3);
+      }
+      .col-l-9 {
+        width: calc(100% / 12 * 9);
+      }
       .col-l-4 {
         width: calc(100% / 12 * 4);
       }
-
-      .col-l-8 {
-        width: calc(100% / 12 * 8);
-      }
     }
 
-    /* xl */
+    /* xl*/
     @media (min-width: 1200px) {
-      .col-xl-2 {
-        width: calc(100% / 12 * 2);
+      .col-xl-3 {
+        width: calc(100% / 12 * 3);
       }
-
-      .col-xl-10 {
-        width: calc(100% / 12 * 10);
+      .col-xl-9 {
+        width: calc(100% / 12 * 9);
+      }
+      .col-xl-3 {
+        width: calc(100% / 12 * 3);
       }
     }
+
+
   </style>
 </head>
 <body>
   <main>
     <div class="container">
+
       <div class="row">
-        <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">
-          col #1
+
+        <div class="col-3 col-s-12 col-m-3 col-l-3 col-xl-3 left-side">
+          Left side
         </div>
-        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
-          col #2
+
+        <div class="col-9 col-s-12 col-m-9 col-l-9 col-xl-9">
+          Right side
+
+          <div class="row">
+
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-3">
+              Card 1
+            </div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-3">
+              Card 2
+            </div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-3">
+              Card 3
+            </div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-3">
+              Card 4
+            </div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-3">
+              Card 5
+            </div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-3">
+              Card 6
+            </div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-3">
+              Card 7
+            </div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-3">
+              Card 8
+            </div>
+            <div class="col-4 col-s-12 col-m-6 col-l-4 col-xl-3">
+              Card 9
+            </div>
+
+          </div>
         </div>
       </div>
     </div>
