media-query-grid by Voroniuk

--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -79,7 +79,7 @@
       .col-s-10 {
         width: calc(100% / 12 * 10);
       }
-    }
+      }
 
     /* m */
     @media (min-width: 768px) {
@@ -115,12 +115,50 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">
-          col #1
+
+        <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-2">
+          Left side
         </div>
-        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
-          col #2
+
+        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-10">
+         Right side
+          <div class="row">
+
+                <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                  1
+                </div>
+                <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                  2
+                </div>
+                <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                  3
+                </div>
+                <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                  4
+                </div>
+                <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                  5
+                </div>
+                <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                  6
+                </div>
+                <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                  7
+                </div>
+                <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                  8
+                </div>
+                <div class="col-12 col-s-6 col-m-6 col-l-4 col-xl-4">
+                  9
+                </div>
+          </div>
+
         </div>
+
+
+
+
+
       </div>
     </div>
   </main>
