--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
   <link rel="stylesheet" href="grid.css">
   <title>Grid with media queries</title>
 </head>
+
 <body>
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-12 col-s-2 col-m-6 col-l-4 col-xl-10">
-          col #1
+        <div class="col col-xl-3 col-l-3 col-m-3 col-s-1">
+          left side
         </div>
-        <div class="col-12 col-s-10 col-m-6 col-l-8 col-xl-2">
-          col #2
+        <div class="col col-xl-9 col-l-9 col-m-9 col-s-12">
+          <div class="row">
+            <div class="col col-12">right side</div>
+          </div>
+          <div class="row">
+            <div class="col col-xl-3 col-l-4 col-m-6 col-s-12">card 1</div>
+            <div class="col col-xl-3 col-l-4 col-m-6 col-s-12">card 2</div>
+            <div class="col col-xl-3 col-l-4 col-m-6 col-s-12">card 3</div>
+            <div class="col col-xl-3 col-l-4 col-m-6 col-s-12">card 4</div>
+            <div class="col col-xl-3 col-l-4 col-m-6 col-s-12">card 5</div>
+            <div class="col col-xl-3 col-l-4 col-m-6 col-s-12">card 6</div>
+          </div>
         </div>
       </div>
     </div>
+    </div>
   </main>
 </body>
+
 </html>
