--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -71,6 +71,17 @@
     }
 
     /* s */
+    @media (max-width: 575px) {
+      .col-s-2 {
+        width: calc(100% / 12 * 2);
+        display: none;
+      }
+
+      .col-s-10 {
+        width: calc(100% / 12 * 10);
+      }
+      }
+
     @media (min-width: 576px) {
       .col-s-2 {
         width: calc(100% / 12 * 2);
@@ -154,10 +165,6 @@
           </div>
 
         </div>
-
-
-
-
 
       </div>
     </div>
