--- a/grid/flex-grid.html
+++ b/grid/flex-grid.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-      <div class="col-left-side">
+      <div class="col-left-side col-m-4 col-s-6">
         Left side
       </div>
 
