--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -10,10 +10,10 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-12 col-m-6 col-l-3 col-xl-3 hide">
+        <div class="col-12 d-none d-block col-m-4 col-l-3 col-xl-3 ">
           Left Side
         </div>
-        <div class="col-12 col-s-12 col-m-6 col-l-9 col-xl-9">
+        <div class="col-12 col-s-12 col-m-8 col-l-9 col-xl-9">
           Right Side
           <div class="row">
             <div class="col-4 col-s-12 col-m-12 col-l-6 col-xl-4">card 1</div>
