--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -9,26 +9,24 @@
 </head>
 
 <body>
-  <main>
-    <div class="container">
-      <div class="row left">
+    <main class="container height-100">
+      <div class="row height-100">
         <div class="col-s-none col-xs-none col-m-block col-m-4 col-l-3 col-xl-3 ">left side</div>
         <div class="col-xs-12 col-s-12 col-m-8 col-l-9 col-xl-9">
           right side
           <div class="row">
-            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">1</div>
-            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">2</div>
-            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">3</div>
-            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">4</div>
-            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">5</div>
-            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">6</div>
-            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">7</div>
-            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">8</div>
-            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">9</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">card 1</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">card 2</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">card 3</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">card 4</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">card 5</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">card 6</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">card 7</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">card 8</div>
+            <div class="col-xs-12 col-s-12 col-m-6 col-l-4 col-xl-4">card 9</div>
           </div>
         </div>
       </div>
-    </div>
-  </main>
+    </main>
 </body>
 </html>
