optimized code and add index file main project

--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -5,31 +5,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>Grid with media queries</title>
-  <link rel="stylesheet" href="./style_grid.css">
+  <link rel="stylesheet" href="../styles/style_grid.css">
 
 </head>
 
 <body>
   <main>
     <div class="container">
-      <div class="left-col col-s-none col-m-4  col-l-3 col-xl-3 ">
+      <div class="left-col col-sm-none col-md-none  col-lg-3 col-xl-3 ">
         Left col
       </div>
-      <div class="right-col  col-s-12 col-m-8 col-l-9 col-xl-9 ">
+      <div class="right-col  col-sm-12 col-md-12 col-lg-9 col-xl-9 ">
         Right col
         <div class="row">
-          <div class="card-col col-s-12 col-m-12  col-l-6 col-xl-4">
+          <div class="card-col col-sm-12 col-md-12  col-lg-6 col-xl-4">
             col 1
           </div>
-          <div class="card-col col-s-12  col-m-12  col-l-6 col-xl-4">
+          <div class="card-col col-sm-12  col-md-12  col-lg-6 col-xl-4">
             col 2
           </div>
-          <div class="card-col  col-s-12 col-m-12 col-l-6 col-xl-4">
+          <div class="card-col  col-sm-12 col-md-12 col-lg-6 col-xl-4">
             col 3
           </div>
         </div>
-
-
       </div>
     </div>
   </main>
