--- a/grid/media-query-grid.html
+++ b/grid/media-query-grid.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <div class="container">
-            <div class="left col-xl-3 col-l-3 col-m-4 col-s-3 col-xs-3">
+            <div class="left col-xs-0 col-s-3 col-m-3 col-l-3 col-xl-3">
                 col-left
             </div>
             <div class="right col-xl-9 col-l-9 col-m-8 col-s-9">col-right
