--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
       <div class="card-about-item">Ноутбук Acer Aspire 3 A315-57G-336G
         (NX.HZREU.01S) Charcoal Black</div>
       <div class="card-categories">Laptop</div>
-      <div class="card-add-to-card"></div>
+      <div class="card-add-to-card">ADD TO CART</div>
     </div>
   </div>
-
-
 </body>
 </html>
+
